compiler/tests/golden/suggestions/threshold_adjustment.txt
error: type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug` (drugbank:drug): semantic distance 0.35 exceeds threshold 0.3 between chebi:drug and drugbank:drug
  --> /tmp/demetrios_test_XXXX/threshold_suggest.dm:15:13
   |
 15 |     analyze(db);
   |              ^

Error:   × Type errors:
  │ type mismatch: expected `ChEBIDrug` (chebi:drug), found `DrugBankDrug`
  │ (drugbank:drug): semantic distance 0.35 exceeds threshold 0.3 between
  │ chebi:drug and drugbank:drug